--- a/Vlog/Views/Shared/_Layout.cshtml
+++ b/Vlog/Views/Shared/_Layout.cshtml
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script>
+        function sortByProperty(property) {
+            return function (a, b) {
+                if (a[property] > b[property])
+                    return 1;
+                else if (a[property] < b[property])
+                    return -1;
+
+                return 0;
+            }
+        }
+
         function formatRupiah(angka) {
             var angka = angka.toString();
             var prefix = "Rp ";
@@ -25,6 +36,49 @@
 
             rupiah = split[1] != undefined ? rupiah + ',' + split[1] : rupiah;
             return prefix == undefined ? rupiah : (rupiah ? 'Rp. ' + rupiah : '');
+        }
+
+        function createOptionEl(parentEl, value, text) {
+            optionEl = document.createElement("option")
+            optionEl.appendChild(document.createTextNode(text))
+            optionEl.value = value
+            optionEl.innerHtml = text
+            parentEl.appendChild(optionEl)
+        }
+
+        function createServiceOptionElement(parentEl, data) {
+            data.sort(sortByProperty("name"))
+
+            for (i = 0; i < data.length; i++) {
+                createOptionEl(parentEl, data[i].id, data[i].name)
+            }
+        }
+
+        function createProvinceElement(parentEl, data) {
+            data.sort(sortByProperty("name"))
+
+            for (i = 0; i < data.length; i++) {
+                createOptionEl(parentEl, data[i].id, data[i].name)
+            }
+        }
+
+        function createRegencyElement(parentEl, data) {
+            data.sort(sortByProperty("name"))
+
+            for (i = 0; i < data.length; i++) {
+                createOptionEl(parentEl, data[i].id, data[i].name)
+            }
+        }
+
+        function getRegencyByProvinceId(regencyEl, id) {
+            $.ajax(`${url_regency}/${id}`)
+                .done(function (msg) {
+                    console.log(msg)
+                    createRegencyElement(regencyEl, msg)
+                })
+                .fail(function () {
+                    alert("error");
+                })
         }
 
     </script>
